--- a/src/style/post.css
+++ b/src/style/post.css
@@ -10,7 +10,7 @@
 .post > img {
   width: 100%;
   height: 300px;
-  object-fit:cover;
+  object-fit: cover;
 }
 footer {
   /* border:2px solid red */
@@ -71,4 +71,8 @@ p {
 .caption img {
   width: 23px;
   cursor: pointer;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
 }
