--- a/src/style/app.css
+++ b/src/style/app.css
@@ -63,11 +63,13 @@
   border-radius: 5px;
   width: 60%;
 }
+
 .Modal form {
   width: 60%;
   max-width: 600px;
+  min-width:300px;
   background-color: white;
-  height: 300px;
+  height: 310px;
   margin: auto;
   margin-top: 100px;
   padding: 30px;
